# vrac-rs

./: .gitignore  Cargo.toml  README.md  Rocket.toml  deploy
migrations/2021-02-18-073133_token/: up.sql
migrations/2021-06-15-151157_file/: down.sql  up.sql
migrations/2022-03-28-120551_create_auth/: up.sql
src/: api.rs  cleanup.rs  conf.rs  db.rs  errors.rs  lib.rs  main.rs  schema.rs  warpmain.rs
templates/: base.hbs  gen_token.hbs  gen_token.html.hbs  get_files.hbs  get_files.html.hbs  index.html.hbs  partial_flash.hbs  upload_files.hbs  upload_files.html.hbs
