[package]
name = "vrac"
version = "0.1.0"
authors = ["Grégoire Charvet 黑瓜 <greg+git@geekingfrog.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
chrono = "0.4.19"
diesel = { version = "1.4.7", features = ["chrono", "sqlite"] }
diesel_migrations = "1.4.0"
futures = "0.3.15"
log = "0.4.14"
multer = "2.0.0"
rocket = { version = "0.5.0-rc.1", features = ["json"]}
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_sqlite_pool"]}
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.25"
tokio-util = { version = "0.6.7", features = ["codec"] }
