[package]
name = "vrac"
version = "0.1.0"
authors = ["Grégoire Charvet 黑瓜 <greg+git@geekingfrog.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
chrono-humanize = "0.2.1"
diesel = { version = "1.4.8", features = ["chrono", "sqlite"] }
diesel_migrations = "1.4.0"
futures = "0.3.21"
log = "0.4.14"
multer = "2.0.2"
rocket = { version = "0.5.0-rc.1", features = ["json"]}
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_sqlite_pool"]}
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.30"
tokio-util = { version = "0.7.0", features = ["codec"] }

[[bin]]
name = "vrac"
path = "src/main.rs"

[[bin]]
name = "teststuff"
path = "src/bin/teststuff.rs"
